--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Better than yesterday</string>
+
+    <!--Main activity-->
+    <string name="fab_add_title">Добавить</string>
 </resources>
